# teto-tts-v1

./: .gitignore  LICENSE  README.local.md  README.md  pyproject.toml  tts
miotts_server/: gradio_app.py
refs/: make_ref_clip.sh
scripts/: make_ref_clip.sh  start-api-cpu.sh  start-llm-cpu.sh  tts_request.py  tts_worker.py
